@@ -1386,3 +1386,4 @@ Moved all background cron jobs (except existing backups) to Webmin's built-in sc
 Updated the OpenCart script installer to version 1.5.5.1, Squirrelmail to 1.4.22, WordPress to 3.5.1, Movable Type to 5.2.3, PHP-Calendar to 1.1, Gallery to 3.0.4, Advanced Poll to 2.0.9, PHP-Wiki to 1.4.0rc1, Simple Invoices to 2011.1, phpScheduleIt to 2.3.6, Advanced Guestbook to 2.4.4, Zikula to 1.3.5, Roundcube to 0.8.5, phpMyAdmin to 3.5.6, Mantis to 1.12.14, SMF to 2.0.4, Trac to 1.0.1, SugarCRM to 6.5.10, Joomla to 3.0.3 and 2.5.9, and Radiant to 1.1.1. Marked several scripts that no longer appear to be updated or available as unsupported.
 Added the ability to enable or disable server-side includes for a specific file extension for virtual servers with a website.
 If PHP 5.3 or higher is installed via a separate package, Virtualmin will now detect it and allow it to be selected on a per-domain or per-directory basis. This is useful for systems whose default PHP package is version 5.2 or older.
+Added a template section to configure the mail client auto-configuration XML, for example if some domains use custom mail servers.
